fix: disable consul ingress

--- a/helm-values/consul/dev.yaml
+++ b/helm-values/consul/dev.yaml
@@ -7,7 +7,7 @@ server:
 ui:
   enabled: true
   ingress:
-    enabled: true
+    enabled: false
     ingressClassName: public
     pathType: Prefix
     hosts:
