--- a/git-file-generator/bootstrap.yaml
+++ b/git-file-generator/bootstrap.yaml
@@ -10,7 +10,7 @@ spec:
   source:
     repoURL: https://github.com/tankibaj/argocd-multi-env-helm.git
     targetRevision: main
-    path: apps
+    path: git-file-generator/apps
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
